@@ -22,6 +22,11 @@ Version 11
 
 --Fixed potential level-0 difficulty-free power-up-building exploit.
 
+--Changed so that hearts are knocked off higher self when hit to thwart the 
+  heart rush exploit.
+
+
+
 
 Version 10   2011-February-13
 
